Fixed navbar on mobile

--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -104,6 +104,11 @@
 
 @media (max-width: 900px) {
     .nav {
+        &.opaque{
+            border-bottom: 1px solid var(--text-color);
+            backdrop-filter: none;
+            transition: all 500ms ease-in-out;
+        }
         .logo {
             left: 20px;
         }
